Minor Updates.
Switched to a fixed thread pool and increased queue size to 150, any higher will just be slower.
Adjusted down crazy mongoDB settings.